chore: format snapshot services
